# today_lunch

./: .gitignore
backend/: .gitignore  pyproject.toml
backend/config/: settings.py  urls.py
backend/places/: admin.py  keys.py  models.py  serializers.py  urls.py  views.py
backend/places/migrations/: 0001_initial.py  0002_alter_place_description_alter_place_hates_num_and_more.py  0003_place_hate_user_place_like_user.py  0004_alter_place_hate_user_alter_place_like_user.py  0005_alter_place_hate_user_alter_place_like_user.py  0006_alter_place_hate_user_alter_place_like_user.py  0007_remove_place_time.py  0008_alter_place_category.py  0008_alter_place_category_alter_place_link.py  0009_merge_20230707_2150.py  0009_remove_place_hates_num_remove_place_likes_num.py  0010_merge_20230708_1759.py  0010_place_hates_num_place_likes_num.py  0011_remove_place_hates_num_remove_place_likes_num.py
backend/places/templates/: testpage.html
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_userid.py  0003_alter_user_options_remove_user_date_joined_and_more.py  0004_user_email.py  0005_alter_user_managers.py
backend/users/templates/: createuser.html
