[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["hiheeen <gmldms0338@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
django-cors-headers = "^4.1.0"
django-dotenv = "^1.4.2"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
